<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="edu.oregonstate.studentlife.ihcv2Demo.GetUserInfoActivity">

    <ImageView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:src="@drawable/mu_sunset"
        android:scaleType="centerCrop"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="vertical"
        android:background="@color/colorAccent">

        <TextView
            android:id="@+id/tv_userinfo_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/userinfo_fill_msg"
            android:textSize="18sp"
            android:textColor="@color/colorPrimaryDark"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:background="@color/light_gray"/>

        <TextView
            android:id="@+id/tv_user_age"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:textSize="15sp"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:background="@color/light_gray"/>

        <CheckBox
            android:id="@+id/cb_is_osu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:text="@string/prompt_is_osu"
            android:textSize="15sp"
            android:textColor="@color/colorPrimaryDark"
            android:checked="false"/>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:theme="@style/TextInputLayoutLabelGrey">

            <EditText
                android:id="@+id/et_user_studentid"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_studentid"
                android:inputType="number"
                android:maxLines="1"
                android:singleLine="true" />

        </android.support.design.widget.TextInputLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:background="@color/light_gray"/>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:theme="@style/TextInputLayoutLabelGrey">

            <EditText
                android:id="@+id/et_user_onid"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_onid"
                android:inputType="text"
                android:maxLines="1"
                android:singleLine="true" />

        </android.support.design.widget.TextInputLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:background="@color/light_gray"/>

        <TextView
            android:id="@+id/tv_user_type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            android:paddingTop="15dp"
            android:text="@string/userinfo_type_prompt"/>

        <Spinner
            android:id="@+id/sp_user_type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:background="@color/light_gray"/>

        <TextView
            android:id="@+id/tv_user_grade"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            android:paddingTop="15dp"
            android:text="@string/userinfo_grade_prompt"/>

        <Spinner
            android:id="@+id/sp_user_grade"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:background="@color/light_gray"/>

        <TextView
            android:id="@+id/tv_pick_profilepic"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="15dp"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            android:paddingBottom="5dp"
            android:text="@string/pick_profilepic_msg"
            android:textSize="16sp"
            android:textColor="@color/colorPrimaryDark"/>

        <Button
            android:id="@+id/btn_submit_userinfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/submit_userinfo"
            android:textSize="15sp"
            android:fontFamily="@font/stratum2_medium"/>

    </LinearLayout>

</RelativeLayout>
