<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:layout_below="@+id/appBarLayout"
    android:background="@color/colorPrimary"
    tools:openDrawer="start">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fitsSystemWindows="true"
                android:orientation="vertical"
                android:layout_margin="8dp"
                android:background="@color/colorPrimary">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:background="@color/eventGold">

                    <TextView
                        android:id="@+id/tv_gold"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/gold_prizes_list"
                        android:textSize="25dp"
                        android:textStyle="bold"
                        android:textAlignment="center"
                        android:textColor="@color/colorPrimaryDark"
                        android:background="@color/eventGold" />

                    <android.support.v7.widget.RecyclerView
                        android:id="@+id/rv_gold_prizes"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>

                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:background="@color/dark_gray"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:background="@color/eventSilver">

                    <TextView
                        android:id="@+id/tv_silver"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/silver_prizes_list"
                        android:textSize="25dp"
                        android:textStyle="bold"
                        android:textAlignment="center"
                        android:textColor="@color/colorPrimaryDark"
                        android:background="@color/eventSilver" />

                    <android.support.v7.widget.RecyclerView
                        android:id="@+id/rv_silver_prizes"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>

                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:background="@color/dark_gray"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:background="@color/eventBronze">

                    <TextView
                        android:id="@+id/tv_bronze"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/bronze_prizes_list"
                        android:textSize="25dp"
                        android:textStyle="bold"
                        android:textAlignment="center"
                        android:textColor="@color/colorPrimaryDark"
                        android:background="@color/eventBronze" />

                    <android.support.v7.widget.RecyclerView
                        android:id="@+id/rv_bronze_prizes"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>

                </LinearLayout>

            </LinearLayout>

        </ScrollView>

        <android.support.design.widget.BottomNavigationView
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/bottom_navigation"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_alignParentBottom="true"
            app:itemBackground="@color/colorAccent"
            app:itemIconTint="@color/colorPrimaryDark"
            app:itemTextColor="@color/colorPrimaryDark"
            app:menu="@menu/bottm_nav_items" />

    </RelativeLayout>

    <android.support.design.widget.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:fitsSystemWindows="false"
        app:headerLayout="@layout/nav_header"
        app:menu="@menu/drawer_content" />

</android.support.v4.widget.DrawerLayout>